syntax = "proto3";

option csharp_namespace = "Padel.Proto.Auth.V1";

option go_package = "gateway/authpb";

package auth.v1;

service AuthService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {
    }
    rpc SignIn (SignInRequest) returns (SignInResponse) {
    }
    rpc GetNewAccessToken (GetNewAccessTokenRequest) returns (GetNewAccessTokenResponse) {
    }
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message GetNewAccessTokenRequest {
    string refreshToken = 1;
}

message GetNewAccessTokenResponse {
    OAuthToken token = 1;
}


message OAuthToken {
    string accessToken = 1;
    int64 expires = 2;
    string refreshToken = 3;
    TokenType type = 4;

    enum TokenType {
        Unknown = 0;
        Bearer = 1;
    }
}

message SignInResponse {
    OAuthToken token = 1;
}

message NewUser {
    string email = 1;
    string password = 2;
    string name = 3;
    Date dateOfBirth = 4;

    message Date {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
    }
}

message SignUpRequest {
    NewUser user = 1;
}

message SignUpResponse {

}

